integration_tests/codegen_fail/fail/union/trait_wrong_method_input_args.rs
use juniper::{graphql_union, GraphQLObject};

#[graphql_union]
trait Character {
    fn a(&self, ctx: &(), rand: u8) -> Option<&Human>;
}

#[derive(GraphQLObject)]
pub struct Human {
    id: String,
}

fn main() {}
